finished chapter 1.3; making unity build kind-of work with clangd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,6 @@ set(CMAKE_C_STANDARD 17)
 
 set(CMAKE_C_FLAGS "-Wall -Wpedantic")
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")
+
 add_executable(writing_an_interpreter all.c)
